--- a/.github/workflows/docker-compose-tests.yml
+++ b/.github/workflows/docker-compose-tests.yml
@@ -17,7 +17,7 @@ jobs:
 
   build:
     name: Run
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, amd-runners]
     steps:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v3
