--- a/.github/workflows/go-e2e.yml
+++ b/.github/workflows/go-e2e.yml
@@ -29,7 +29,7 @@ env:
 jobs:
   pick_docker_image:
     name: pick_docker_image
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, amd-runners]
     outputs:
       docker_image_12:  ${{ steps.metadata.outputs.docker_image_12 }}
       docker_image_13:  ${{ steps.metadata.outputs.docker_image_13 }}
@@ -76,7 +76,7 @@ jobs:
   test-end-to-end:
     name: e2e
     needs: pick_docker_image
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, amd-runners]
     strategy:
       matrix:
         test-setups:
@@ -127,7 +127,7 @@ jobs:
   test-jaeger-storage-integration:
     name: jaeger-storage-integration
     needs: pick_docker_image
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, amd-runners]
     strategy:
       matrix:
         test-setups:
@@ -175,7 +175,7 @@ jobs:
   upgrade_test:
     name: upgrade_tests
     needs: pick_docker_image
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, amd-runners]
     steps:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v3
@@ -216,7 +216,7 @@ jobs:
     needs:
       - test-end-to-end
       - test-jaeger-storage-integration
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, amd-runners]
     steps:
       - name: Mark the job as a success
         if: needs.test-end-to-end.result == 'success' && needs.test-jaeger-storage-integration.result == 'success'
