--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,7 +17,7 @@ env:
 jobs:
   scripts:
     name: Lint shell scripts
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, amd-runners]
     steps:
     - name: Check out code
       uses: actions/checkout@v3
@@ -27,7 +27,7 @@ jobs:
 
   build:
     name: Build and Lint
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, amd-runners]
     steps:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v3
@@ -58,7 +58,7 @@ jobs:
 
   test:
     name: unit
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, amd-runners]
     steps:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v3
@@ -101,7 +101,7 @@ jobs:
         git diff --exit-code
 
   docs:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, amd-runners]
     steps:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v3
