--- a/.github/workflows/gosec.yml
+++ b/.github/workflows/gosec.yml
@@ -9,7 +9,7 @@ on:
     branches: [master, main, force_test, release-*]
 jobs:
   tests:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, amd-runners]
     env:
       GO111MODULE: on
     steps:
